tests/fixtures/invalid/divmod_none_list.py
# Cannot call divmod() with None, List[int]
x = divmod(None, [1, 2, 3])
